fix: align process section to design

--- a/css/styles.css
+++ b/css/styles.css
@@ -1289,7 +1289,7 @@ section {
   position: relative;
 
   width: 100%;
-  aspect-ratio: 16/9;
+  aspect-ratio: 21/9;
 
   overflow: hidden;
 }
